fix : TextAlign 미작동 해결
- display:flex라면 text-align이 작동을 하지 않음

--- a/src/components/Atoms/TextTitle/index.module.scss
+++ b/src/components/Atoms/TextTitle/index.module.scss
@@ -29,15 +29,15 @@
   }
 
   &.left {
-    text-align: left;
+    justify-content: flex-start;
   }
 
   &.center {
-    text-align: center;
+    justify-content: center;
   }
 
   &.right {
-    text-align: right;
+    justify-content: flex-end;
   }
 
   &.displayInline {
